k8s-configs/cluster-tools/base/logging/elastic-stack/os-dashboards/deployment.yaml
# Source: opensearch-dashboards/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  labels:
    app.kubernetes.io/name: opensearch-dashboards
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch-dashboards
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opensearch-dashboards
    spec:
      securityContext:
        {}
      serviceAccountName: opensearch-dashboards
      volumes:
        - name: config
          configMap:
            name: opensearch-dashboards-config
        - name: os-certs
          secret:
            secretName: opensearch-cert
      containers:
      - name: dashboards
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        #image: public.ecr.aws/r2h3l6e4/pingcloud-clustertools/opensearchproject/opensearch-dashboards:2.6.0
        image: opensearchproject/opensearch-dashboards:2.8.0
        imagePullPolicy: Always
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 5601
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 5601
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 20
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5601
          timeoutSeconds: 5
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1024M
          requests:
            cpu: 100m
            memory: 512M
        volumeMounts:
          - name: config
            mountPath: /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
            subPath: opensearch_dashboards.yml
          - name: os-certs
            mountPath: /usr/share/opensearch-dashboards/config/certs
